Fixed /user/{id} page
Fixed how subscribed films determined, favourite directors bug.
Films and actors display

--- a/interface/jade/page_user.jade
+++ b/interface/jade/page_user.jade
@@ -128,7 +128,7 @@ body.page-profile
                                                 a(href='/persons/' + item.id, title='')
                                                     img.img-circle(src=item.photo || "static/img/nophoto.png", alt='')
                                                     | #{item.name}
-                if user.actors
+                if user.directors
                     section.people-block
                         .container
                             .sector-person
