--- a/interface/jade/page_account.jade
+++ b/interface/jade/page_account.jade
@@ -90,12 +90,12 @@ body
                                     ul.soc-acc
                                         li
                                             if user.social.facebook
-                                                a(href='#', title='')
+                                                a(href='/', title='')
                                                     img(src='static/img/i-fb.png', alt='')
                                                     | facebook.com/vasiliev
                                                 a.block.i-close.sprite.sprite-i-close.fright(href='#')
                                             else
-                                                a(href='#', title='')
+                                                a(href='/login/facebook', title='')
                                                     img(src='static/img/i-fb.png', alt='')
                                                     span Привязать
                                         li
@@ -105,7 +105,7 @@ body
                                                     | twitter.com/vasiliev
                                                 a.block.i-close.sprite.sprite-i-close.fright(href='#')
                                             else
-                                                a(href='#', title='')
+                                                a(href='/login/twitter', title='')
                                                     img(src='static/img/i-tw.png', alt='')
                                                     span Привязать
                                         li
@@ -115,7 +115,7 @@ body
                                                     | vk.com/vasiliev
                                                 a.block.i-close.sprite.sprite-i-close.fright(href='#')
                                             else
-                                                a(href='#', title='')
+                                                a(href='/login/vk-oauth', title='')
                                                     img(src='static/img/i-vk.png', alt='')
                                                     span Привязать
                                         li
@@ -125,7 +125,7 @@ body
                                                     | plus.google.com/vasiliev
                                                 a.block.i-close.sprite.sprite-i-close.fright(href='#')
                                             else
-                                                a(href='#', title='')
+                                                a(href='/login/google-oauth2', title='')
                                                     img(src='static/img/i-go.png', alt='')
                                                     span Привязать
                                     .form-group
